<resources>
    <string name="app_name">Rick &amp; Morty Characters</string>
    <string name="detail_info">Detail Info</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_character">Favorite Character</string>
    <string name="search">Search</string>
    <string name="no_result">No Result</string>
    <string name="no_favorite_character">No Favorite Character</string>
</resources>